# pagora

./: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
app/: package.json
app/public/: index.html  manifest.json
app/src/: App.tsx  index.css
codes/: tetris.pago
lang/: .eslintrc.js  .gitignore  package.json  tsconfig.json
lang/src/: analyzer.test.ts  analyzer.ts  api.ts  ast.ts  ast_util.ts  compiler.ts  config.ts  errors.ts  global.d.ts  index.ts  lexer.test.ts  (+7 more)
lang2/: .gitignore  Cargo.toml
lang2/lib/builtin/: builtin.p
lang2/lib/fmt/: print.p
lang2/src/: analyzer.rs  ast.rs  builtin.rs  env.rs  errors.rs  lib.rs  loader.rs  package.rs  parser.rs  scanner.rs  scope.rs  semantic.rs  test.rs  tokens.rs  toposort.rs  translate.rs  types.rs
lang2/src/analyzer/: constant.rs  dependencies.rs  mod.rs  package.rs  scope.rs
lang2/testcases/: add.p  add.program.json  add.program.yaml  hello.p  hello.program.json  hello.program.yaml  module.yaml  prob1.p  prob1.program.yaml  struct.p  struct.program.yaml  test1.yaml
lang2/testcases/test1/: struct.p
lang2/tests/: integration_test.rs  translate_test.rs
public/: index.html
runner/: .prettierrc.yml  jest.config.js  package.json
src/: analyzer.test.ts  analyzer.ts  api.ts  ast.ts  ast_util.ts  codegen.test.ts  codegen.ts  context.ts  encoder.test.ts  encoder.ts  errors.ts  index.ts  interpreter.ts  lexer.test.ts  lexer.ts  parser.test.ts  parser.ts  semantic.ts  semantic_util.ts  tokens.ts  wasm.ts  wasm_ir.test.ts  wasm_ir.ts
wasm/: package.json
(+17 files in other folders)
