[package]
name = "lang2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "regenerate_test"
path = "src/bin/tools/regenerate_test.rs"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_yaml = "0.9.14"
